# geocomp_proyecto

./: .gitignore  CMakeLists.txt  cube.off  mesh.cpp  poli.cpp  precompilado.cpp  precompilado.hpp  readme.md  triangulate.cpp  triangulate.hpp
